--- a/bitcoin-payment/src/main/resources/application.properties
+++ b/bitcoin-payment/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#Eureka
+spring.application.name = bitcoin-payment
+server.port = 8300
+eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
