--- a/card-payment/src/main/resources/application.properties
+++ b/card-payment/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#Eureka
+spring.application.name = card-payment
+server.port = 8400
+eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
