Pocetak registracije. Co-authored-by: jaseyrae9 <jelena.surlan9@uns.ac.rs>

--- a/payment-concentrator/src/main/resources/application.properties
+++ b/payment-concentrator/src/main/resources/application.properties
@@ -2,3 +2,21 @@
 spring.application.name = payment-concentrator
 server.port = 8100
 eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+
+#Database
+spring.datasource.url = jdbc:postgresql://localhost:5432/sep
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.datasource.sql-script-encoding = UTF-8
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+
+spring.datasource.tomcat.test-while-idle = true
+spring.datasource.tomcat.validation-query = SELECT 1
+
+#Da bi dodali glavnog admina
+spring.datasource.initialization-mode=always
