--- a/payment-concentrator/src/main/resources/application.properties
+++ b/payment-concentrator/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.datasource.tomcat.validation-query = SELECT 1
 
 #Da bi dodali glavnog admina
 spring.datasource.initialization-mode=always
+
+#omoguci da se vide sve registrovane rute
+#http://localhost:8762/actuator/routes
+management.endpoints.web.exposure.include=*
