#4 endpoints koji na osnovu izabrane metode plaćanja prosleđuju informacije vezane za tu metodu plaćanja

--- a/payment-concentrator/src/main/resources/application.properties
+++ b/payment-concentrator/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eurek
 #Database
 spring.datasource.url = jdbc:postgresql://localhost:5432/sep
 spring.datasource.username = postgres
-spring.datasource.password = postgres
+spring.datasource.password = familija
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
