Https izmedju koncentratora i servisa placanja

--- a/bitcoin-payment/src/main/resources/application.properties
+++ b/bitcoin-payment/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 spring.application.name = bitcoin-payment
 server.port = 8300
 eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+
+# Za Https
+server.ssl.enabled=true
+server.ssl.key-alias=service
+server.ssl.key-store-type=JKS
+server.ssl.key-password=password
+server.ssl.key-store=classpath:key-store.jks
