--- a/payment-concentrator/src/main/resources/application.properties
+++ b/payment-concentrator/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eurek
 #Database
 spring.datasource.url = jdbc:postgresql://localhost:5432/sep
 spring.datasource.username = postgres
-spring.datasource.password = familija
+spring.datasource.password = postgres
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
@@ -23,4 +23,11 @@ spring.datasource.initialization-mode=always
 
 #omoguci da se vide sve registrovane rute
 #http://localhost:8762/actuator/routes
-management.endpoints.web.exposure.include=*
+# management.endpoints.web.exposure.include=*
+
+server.ssl.enabled= false
+#trust store location
+server.ssl.trust-store=classpath:key-store.jks
+#trust store password
+server.ssl.trust-store-password=password
+server.ssl.trust-store-type=JKS
