--- a/science-center/src/main/resources/application.properties
+++ b/science-center/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 server.port = 8008
+
+#Database
+spring.datasource.url = jdbc:postgresql://localhost:5432/science-center
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.datasource.sql-script-encoding = UTF-8
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+
+spring.datasource.tomcat.test-while-idle = true
+spring.datasource.tomcat.validation-query = SELECT 1
