--- a/payment-concentrator/src/main/resources/application.properties
+++ b/payment-concentrator/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 
 spring.datasource.sql-script-encoding = UTF-8
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 
 spring.datasource.tomcat.test-while-idle = true
 spring.datasource.tomcat.validation-query = SELECT 1
