Zapoceto placanje putem Bitcoin-a

--- a/pc-gateway/src/main/resources/application.properties
+++ b/pc-gateway/src/main/resources/application.properties
@@ -11,9 +11,18 @@ eureka.client.registerWithEureka = true
 eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
 eureka.client.fetchRegistry = true
 
+server.ssl.enabled= false
+#trust store location
+server.ssl.trust-store=classpath:key-store.jks
+#trust store password
+server.ssl.trust-store-password=password
+server.ssl.trust-store-type=JKS
+
 #pusti Authorization header do auth-service
-zuul.routes.auth-service.sensitive-headers = Cookie, Set-Cookie
+zuul.routes.payment-concentrator.sensitive-headers = Cookie, Set-Cookie
 
 #hystrix
 zuul.host.socket-timeout-millis: 10000
 zuul.host.connect-timeout-millis: 10000
+
+zuul.ssl-hostname-validation-enabled=false
