--- a/bitcoin-payment/src/main/resources/application.properties
+++ b/bitcoin-payment/src/main/resources/application.properties
@@ -3,8 +3,23 @@ spring.application.name = bitcoin-payment
 server.port = 8300
 eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
 
+#Database
+spring.datasource.url = jdbc:postgresql://localhost:5432/bitcoin
+spring.datasource.username = postgres
+spring.datasource.password = postgres
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.datasource.sql-script-encoding = UTF-8
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = false
+
+spring.datasource.tomcat.test-while-idle = true
+spring.datasource.tomcat.validation-query = SELECT 1
+
 # Za Https
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-alias=service
 server.ssl.key-store-type=JKS
 server.ssl.key-password=password
