Zapoceta banka i metoda placanje putem banke

--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-#Eureka
-spring.application.name = card-payment
-server.port = 8400
-eureka.client.service-url.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+server.port = 5005
 
 #Database
-spring.datasource.url = jdbc:postgresql://localhost:5432/card-payment
+spring.datasource.url = jdbc:postgresql://localhost:5432/bank
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 
@@ -18,9 +15,3 @@ spring.jpa.show-sql = false
 spring.datasource.tomcat.test-while-idle = true
 spring.datasource.tomcat.validation-query = SELECT 1
 
-# Za Https
-server.ssl.enabled=false
-server.ssl.key-alias=service
-server.ssl.key-store-type=JKS
-server.ssl.key-password=password
-server.ssl.key-store=classpath:key-store.jks
