Creating and completing paypal order

--- a/paypal-payment/src/main/resources/application.properties
+++ b/paypal-payment/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
 spring.datasource.sql-script-encoding = UTF-8
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = false
 
 spring.datasource.tomcat.test-while-idle = true
