Fixed CORS issue, updated logging in and registering, adding/deleting/getting all apps

--- a/pc-gateway/src/main/resources/application.properties
+++ b/pc-gateway/src/main/resources/application.properties
@@ -22,7 +22,12 @@ server.ssl.trust-store-type=JKS
 zuul.routes.payment-concentrator.sensitive-headers = Cookie, Set-Cookie
 
 #hystrix
-zuul.host.socket-timeout-millis: 10000
-zuul.host.connect-timeout-millis: 10000
+zuul.host.socket-timeout-millis: 1000000
+zuul.host.connect-timeout-millis: 1000000
 
 zuul.ssl-hostname-validation-enabled=false
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 1000000
+hystrix.command.default.execution.isolation.strategy= THREAD
+
+ribbon.ReadTimeout=60000
