--- a/pcc/src/main/resources/application.properties
+++ b/pcc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port = 5005
+server.port = 6006
 
 #Database
-spring.datasource.url = jdbc:postgresql://localhost:5432/bank
+spring.datasource.url = jdbc:postgresql://localhost:5432/pcc
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 
@@ -14,7 +14,3 @@ spring.jpa.show-sql = false
 
 spring.datasource.tomcat.test-while-idle = true
 spring.datasource.tomcat.validation-query = SELECT 1
-
-
-#
-bankId = 123456
